// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds thread views fetches deep post thread 1`] = `
Object {
  "author": Object {
    "did": "user(0)",
    "displayName": "ali",
    "name": "alice.test",
  },
  "cid": "cids(0)",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "likeCount": 3,
  "myState": Object {
    "like": "record(1)",
  },
  "record": Object {
    "$type": "app.bsky.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "text": "again",
  },
  "replies": Array [
    Object {
      "author": Object {
        "did": "user(1)",
        "name": "carol.test",
      },
      "cid": "cids(1)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "myState": Object {},
      "parent": Object {
        "author": Object {
          "did": "user(0)",
          "displayName": "ali",
          "name": "alice.test",
        },
        "cid": "cids(0)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "likeCount": 3,
        "myState": Object {
          "like": "record(1)",
        },
        "record": Object {
          "$type": "app.bsky.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(0)",
      },
      "record": Object {
        "$type": "app.bsky.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "of course",
      },
      "replies": Array [],
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(2)",
    },
    Object {
      "author": Object {
        "did": "user(2)",
        "displayName": "bobby",
        "name": "bob.test",
      },
      "cid": "cids(2)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "myState": Object {},
      "parent": Object {
        "author": Object {
          "did": "user(0)",
          "displayName": "ali",
          "name": "alice.test",
        },
        "cid": "cids(0)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "likeCount": 3,
        "myState": Object {
          "like": "record(1)",
        },
        "record": Object {
          "$type": "app.bsky.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(0)",
      },
      "record": Object {
        "$type": "app.bsky.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "hear that",
      },
      "replies": Array [
        Object {
          "author": Object {
            "did": "user(0)",
            "displayName": "ali",
            "name": "alice.test",
          },
          "cid": "cids(3)",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "likeCount": 0,
          "myState": Object {
            "repost": "record(5)",
          },
          "parent": Object {
            "author": Object {
              "did": "user(2)",
              "displayName": "bobby",
              "name": "bob.test",
            },
            "cid": "cids(2)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "likeCount": 0,
            "myState": Object {},
            "parent": Object {
              "author": Object {
                "did": "user(0)",
                "displayName": "ali",
                "name": "alice.test",
              },
              "cid": "cids(0)",
              "indexedAt": "1970-01-01T00:00:00.000Z",
              "likeCount": 3,
              "myState": Object {
                "like": "record(1)",
              },
              "record": Object {
                "$type": "app.bsky.post",
                "createdAt": "1970-01-01T00:00:00.000Z",
                "text": "again",
              },
              "replyCount": 2,
              "repostCount": 1,
              "uri": "record(0)",
            },
            "record": Object {
              "$type": "app.bsky.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "hear that",
            },
            "replyCount": 1,
            "repostCount": 0,
            "uri": "record(3)",
          },
          "record": Object {
            "$type": "app.bsky.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "reply": Object {
              "parent": Object {
                "cid": "cids(2)",
                "uri": "record(3)",
              },
              "root": Object {
                "cid": "cids(0)",
                "uri": "record(0)",
              },
            },
            "text": "thanks bob",
          },
          "replies": Array [],
          "replyCount": 0,
          "repostCount": 1,
          "uri": "record(4)",
        },
      ],
      "replyCount": 1,
      "repostCount": 0,
      "uri": "record(3)",
    },
  ],
  "replyCount": 2,
  "repostCount": 1,
  "uri": "record(0)",
}
`;

exports[`pds thread views fetches shallow post thread 1`] = `
Object {
  "author": Object {
    "did": "user(0)",
    "displayName": "ali",
    "name": "alice.test",
  },
  "cid": "cids(0)",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "likeCount": 3,
  "myState": Object {
    "like": "record(1)",
  },
  "record": Object {
    "$type": "app.bsky.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "text": "again",
  },
  "replies": Array [
    Object {
      "author": Object {
        "did": "user(1)",
        "name": "carol.test",
      },
      "cid": "cids(1)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "myState": Object {},
      "parent": Object {
        "author": Object {
          "did": "user(0)",
          "displayName": "ali",
          "name": "alice.test",
        },
        "cid": "cids(0)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "likeCount": 3,
        "myState": Object {
          "like": "record(1)",
        },
        "record": Object {
          "$type": "app.bsky.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(0)",
      },
      "record": Object {
        "$type": "app.bsky.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "of course",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(2)",
    },
    Object {
      "author": Object {
        "did": "user(2)",
        "displayName": "bobby",
        "name": "bob.test",
      },
      "cid": "cids(2)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "myState": Object {},
      "parent": Object {
        "author": Object {
          "did": "user(0)",
          "displayName": "ali",
          "name": "alice.test",
        },
        "cid": "cids(0)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "likeCount": 3,
        "myState": Object {
          "like": "record(1)",
        },
        "record": Object {
          "$type": "app.bsky.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(0)",
      },
      "record": Object {
        "$type": "app.bsky.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "hear that",
      },
      "replyCount": 1,
      "repostCount": 0,
      "uri": "record(3)",
    },
  ],
  "replyCount": 2,
  "repostCount": 1,
  "uri": "record(0)",
}
`;
